cicd/argocd/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    spec:
      containers:
      - name: sample-app
        resources:
          limits:
            memory: 1Gi
            cpu: 500m
          requests:
            cpu: 200m
            memory: 256Mi
