cicd/argocd/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-sample
spec:
  rules:
  - host: springboot-sample.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-sample
            port:
              number: 8080
